--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "robots",
-  "homepage":"https://fernandoapeguero.github.io/robofriends/",
+  "homepage": "https://fernandoapeguero.github.io/robofriends/",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -8,17 +8,19 @@
     "@testing-library/react": "^9.4.0",
     "@testing-library/user-event": "^7.2.1",
     "create-react-class": "^15.6.3",
+    "gh-pages": "^2.2.0",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
-    "react-scripts": "3.3.1"
+    "react-scripts": "3.3.1",
+    "tachyons": "^4.11.1"
   },
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject",
-    "predeploy": "npm run build",
-    "deploy": "gh-pages -d build",
+    "eject": "react-scripts eject"
   },
   "eslintConfig": {
     "extends": "react-app"
