--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
     "gh-pages": "^2.2.0",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
+    "react-redux": "^7.1.3",
     "react-scripts": "3.3.1",
+    "redux": "^4.0.5",
     "tachyons": "^4.11.1"
   },
   "scripts": {
